--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -139,6 +139,10 @@ jobs:
         continue-on-error: true
         run: ls C:\hostedtoolcache\windows\node\16.14.0\x64\node_modules\npm
 
+      - name: Print path 7
+        continue-on-error: true
+        run: ls C:\hostedtoolcache\windows\node\16.14.0\x64\node_modules\npm\node_modules
+
       - name: Where is node-gyp
         continue-on-error: true
         run: where node-gyp
