--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
     "ref-napi": "3.0.3",
-    "robotjs": "^0.6.0",
+    "sendkeys": "^1.1.1",
     "sudo-prompt": "^9.2.1",
     "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1",
