Switch to FPS counter in mediapipe for consistency
Related to #55

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@mediapipe/camera_utils": "^0.3.1640029074",
+    "@mediapipe/control_utils": "^0.6.1629159505",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mui/icons-material": "^5.0.5",
