--- a/.github/workflows/deploy-example.yml
+++ b/.github/workflows/deploy-example.yml
@@ -15,4 +15,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./facemesh-example
+          publish_dir: ./facemesh-example/commander
