--- a/.github/workflows/tauri-builder.yml
+++ b/.github/workflows/tauri-builder.yml
@@ -26,13 +26,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: install app dependencies and build it
+        working-directory: ./tauri-app
         run: yarn && yarn build
-        working-directory: ./tauri-app
+
       - uses: tauri-apps/tauri-action@v0
-        working-directory: ./tauri-app
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          projectPath: ./tauri-app
           tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
           releaseName: "App v__VERSION__"
           releaseBody: "See the assets to download this version and install."
