--- a/.github/workflows/tauri-builder.yml
+++ b/.github/workflows/tauri-builder.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: install app dependencies and build it
         working-directory: ./tauri-app
-        run: yarn && yarn build
+        run: yarn install
 
       - uses: tauri-apps/tauri-action@v0
         env:
