--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
+    "robotjs": "^0.6.0",
     "use-sound": "^4.0.1",
     "uuid": "^8.3.2",
     "webpack-node-externals": "^3.0.0"
