--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -38,6 +38,19 @@ jobs:
         # electron forge only builds on start, run-as-node forces it to crash out
         run: yarn start --run-as-node || true
 
+      - name: Prepare signing
+        uses: ngeri/prepare-signing@v1.0.2
+        with:
+          appStoreConnectPrivateKey: ${{ secrets.appStoreConnectPrivateKey }}
+          keyID: ${{ secrets.keyID }}
+          issuerID: ${{ secrets.issuerID }}
+          # keychainName: ${{ secrets.keychainName }}
+          # keychainPassword: ${{ secrets.keychainPassword }}
+          base64P12File: ${{ secrets.base64P12File }}
+          p12Password: ${{ secrets.p12Password }}
+          bundleIdentifier: ${{ secrets.bundleIdentifier }}
+          signType: ${{ secrets.signType }}
+
       - name: Forge make
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
