--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn start --run-as-node || true
 
       - name: Prepare signing
-        uses: ngeri/prepare-signing@v1.0.2
+        uses: acecentre/prepare-signing@master
         with:
           appStoreConnectPrivateKey: ${{ secrets.appStoreConnectPrivateKey }}
           keyID: ${{ secrets.keyID }}
